code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__settings_help_overlay_section_closed.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: section_closed
---
 +------------------------------------------------------------------------------------------------+
 |                                           Magik Code                                           |
 |                                Not signed in: usage unavailable                                |
 +------------------------------------------------------------------------------------------------+
 +Settings ▸ Model--------------------------------------------------------------------------------+
|                                                                                                |
| ›  Model              + Select Model & Reasoning --------------------------------------------+ |
|    Theme              |                                                                      | |
|    Magik Settings     |  Current model: GPT-5.2-Codex                                        | |
|    Updates            |  Reasoning effort: Medium                                            | |
|    Accounts           |                                                                      | |
|    Agents             |  GPT-5.2                                                             | |
|    Prompts            |  Latest frontier model with improvements across knowledge, reasoning | |
|    Skills             |     XHigh - Extra high reasoning depth for complex problems          | |
|    Auto Drive         |     High - Maximizes reasoning depth for complex or ambiguous proble | |
|    Review             |     Medium - Provides a solid balance of reasoning depth and latency | |
|    Planning           |     Low - Balances speed with some reasoning; useful for straightfor | |
|    Validation         |                                                                      | |
|  ↓ Chrome             +----------------------------------------------------------------------+ |
| ↑ ↓ Move    Enter Open    Esc Close    ? Help                                                  |
|                                                                                                |
+------------------------------------------------------------------------------------------------+

 +------------------------------------------------------------------------------------------------+
 | What can I code for you today?                                                                 |
 +------------------------------------------------------------------------------------------------+
 Read Only  (Shift+Tab change)                                           Ctrl+G editor  •  API key
