code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__settings_help_overlay_section_open.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: section_open
---
 +------------------------------------------------------------------------------------------------+
 |                                           Magik Code                                           |
 |                                Not signed in: usage unavailable                                |
 +------------------------------------------------------------------------------------------------+
 +Settings ▸ Model--------------------------------------------------------------------------------+
|                                                                                                |
| ›  Model              + Select Model & Reasoning --------------------------------------------+ |
|    Theme              |                                                                      | |
|    Magik Settings     |  Curren+------------------------------+                              | |
|    Updates            |  Reason|Model Shortcuts               |                              | |
|    Accounts           |        |                              |                              | |
|    Agents             |  GPT-5.|• Esc    Return to overview   |                              | |
|    Prompts            |  Latest|• Tab    Cycle sections       |s across knowledge, reasoning | |
|    Skills             |     XHi|• Shift+Tab  Cycle backwards  |for complex problems          | |
|    Auto Drive         |     Hig|• ?      Toggle this help     |r complex or ambiguous proble | |
|    Review             |     Med|                              |f reasoning depth and latency | |
|    Planning           |     Low|Press Esc to close            |oning; useful for straightfor | |
|    Validation         |        +------------------------------+                              | |
|  ↓ Chrome             +----------------------------------------------------------------------+ |
| ↑ ↓ Move    Enter Open    Esc Close    ? Help                                                  |
|                                                                                                |
+------------------------------------------------------------------------------------------------+

 +------------------------------------------------------------------------------------------------+
 | What can I code for you today?                                                                 |
 +------------------------------------------------------------------------------------------------+
 Read Only  (Shift+Tab change)                                           Ctrl+G editor  •  API key
